rtl.css
/* ... */
.site-title a {
	color: inherit;
	text-decoration: none;
}

.site-title {
	margin: 0;
	font-size: 16px;
	line-height: 1.2;
	letter-spacing: inherit;
}

.site-description {
	margin: 0 0 20px 0;
	color: #929292;
	font-size: 13px;
	font-family: inherit;
	line-height: 1.4;
	font-style: italic;
	letter-spacing: inherit;
	font-weight: inherit;
	margin-top: 5px;
}

.site-published-separator {
	border-top: 1px solid #dededc;
	padding-top: 20px;
	width: 40px;
	float: left;
}

.site-published {
	margin: 10px 0 0 0;
	color: #333332;
	font-size: 14px;
	line-height: 1.4;
	font-style: normal;
	font-weight: bold;
	letter-spacing: inherit;
}

.site-published-date {
	margin: 5px 0 0 0;
	color: #929292;
	font-size: 12px;
	font-family: inherit;
	line-height: 2;
	letter-spacing: inherit;
	font-weight: inherit;
	font-style: normal;
}

.site-published-date a {
	color: #929292;
	text-decoration: none;
}

.main-navigation ul,
.widget-area ul,
.widget-area ol {
	margin: 0;
	padding: 0;
	list-style: none;
}

.main-navigation li,
.widget-area li {
	display: block;
	margin: 0;
	padding: 0;
}

.main-navigation a,
.widget-area ul li a {
	padding: 5px 0px;
	text-decoration: none;
	display: block;
	line-height: 1.2;
}

.widget-area ul li a {
	line-height: 1.2;
}

.blogroll li a {
	display: inline-block;
}

.widget-area ul li a:hover {
	text-decoration: underline;
}

.widget-area .widget-title {
	font-size: 16px;
	letter-spacing: inherit;
	margin-bottom: 10px;
}

.widget-area select {
	max-width: 100%;
}

.site-navigation,
.post-navigation {
	margin-top: 20px;
}

.infinite-scroll .site-navigation {
	display: none;
}

.infinite-scroll .main-navigation {
	display: block;
}

.infinite-loader {
	display: block;
	padding-right: 50%;
}

.infinite-loader .spinner {
	margin-right: -17px;
}

#infinite-handle {
	margin-top: 20px;
	text-align: center;
}

h1,
h2,
h3,
h4,
h5,
h6 {
	margin: 20px 0;
	font-family: "Myriad Pro", Helvetica, Arial, sans-serif;
	color: #333332;
	letter-spacing: -1px;
	font-weight: 700;
	line-height: 1;
}

h1 {
	font-size: 2.5em;
}

h2 {
	font-size: 1.8em;
}

h3 {
	font-size: 1.6em;
}

h4 {
	font-size: 1.4em;
}

h5 {
	font-size: 1.3em;
}

h6 {
	font-size: 1.2em;
}

.entry-content h1,
.entry-content h2,
.entry-content h3,
.entry-content h4,
.entry-content h5,
.entry-content h6 {
	margin-top: 40px;
	margin-bottom: 15px;
}

.entry-content h1 {
	font-size: 2.1em;
}

.entry-content table {
	border-right: solid 1px #eee;
	border-top: solid 1px #eee;
}

.entry-content table td {
	border-left: solid 1px #eee;
	border-bottom: solid 1px #eee;
}

.page h1.entry-title {
	margin-top: 20px;
	font-size: 3.5em;
}

.blog article,
.archive article,
.search article {
	padding: 40px 0 40px 0;
	border-bottom: solid 1px #ddd;
}

.blog article.show-full-content-first-post {
	padding-top: 0;
}

.blog.single-column-layout article.show-full-content-first-post {
	padding-top: 40px;
}

.archive .page-header,
.search .page-header {
	margin-bottom: 4em;
	padding-bottom: 1em;
	border: solid 1px;
	border-color: #eee;
	background: #F5F5F5;
	padding-top: 10px;
	padding-left: 20px;
	padding-right: 20px;
	padding-bottom: 10px;
	border-radius: 10px;
	-webkit-border-radius: 10px;
	-moz-border-radius: 10px;
}

.archive .page-title,
.search .page-title,
.archive .archive-title {
	font-size: 3.5em;
}

article.first-post {
	margin-top: 0;
	padding-top: 0;
}

.entry-title a {
	color: #333332;
	text-decoration: none;
}

.entry-title a:hover {
	color: #57ad68;
}

.entry-title-meta {
	font-size: 13px;
	color: #b3b3b1;
	font-weight: 100;
	letter-spacing: 1px;
	margin-bottom: 0px;
	margin-top: 0px;
	font-style: normal;
	line-height: 1.4;
}

.entry-title-meta-post-date {
	display: none;
}

.entry-title-meta a {
	color: #b3b3b1;
	text-decoration: none;
}

.entry-title-meta-author {
	display: none;
}

.entry-meta,
.entry-meta a {
	color: #b3b3b1;
	font-size: 13px;
	font-family: sans-serif;
	font-weight: 100;
	font-style: normal;
	text-align: left;
}

.entry-meta a:hover {
	color: #57ad68;
}

.single .entry-meta,
.page .entry-meta {
	border-top: 1px solid #eee;
	margin-bottom: 40px;
	margin-top: 40px;
	padding-top: 40px;
}

.single .edit-link,
.page .edit-link {
	float: left;
}

.site {
	background-color: #ffffff;
	margin: 80px auto;
	padding: 0 40px;
	max-width: 700px;
	margin-bottom: 0;
	margin-top: 100px;
}

.site-header {
	float: right;
	margin-top: 0;
	margin-bottom: 30px;
	width: 160px;
	position: relative;
	margin-right: -220px;
	text-align: left;
}

.site-content,
.site-footer {
	float: left;
	max-width: 700px;
	width: 100%;
}

.widget-area {
	float: right;
	width: 160px; /* Sidebar 1 */
	clear: right;
	margin-right: -220px;
	text-align: left;
	font-family: Helvetica, Arial, sans-serif;
	font-size: 15px;
}

.entry-content,
.widget-area .widget,
.comment {
	-webkit-hyphens: auto;
	-moz-hyphens: auto;
	hyphens: auto;
	word-wrap: break-word;
}

.widget_search input[type="text"] {
	/* fixes overflow issue */
	width: 90%;
}

.site-footer {
	clear: both;
	margin-top: 100px;
	margin-bottom: 40px;
	color: #b3b3b1;
}

.site-footer,
.site-footer a {
	font-size: 13px;
	text-align: center;
}

.site-footer a:hover {
	color: #57ad68;
}

.site-info {
	font-family: sans-serif;
	font-weight: 100;
}

img#wpstats {
	display: block;
	margin: 5px auto;
}

table td {
	padding: 4px;
}

table th {
	padding: 4px;
	border-bottom: solid 1px #ccc;
}

.full-width-featured-image #page {
	margin-top: 20px;
}

/* Post Author Bottom Card */

.post-author-bottom {
	padding-top: 50px;
	padding-bottom: 50px;
	margin-bottom: 40px;
	position: relative;
	border-top: 1px solid #ddd;
	border-bottom: 1px solid #ddd;
	display: none;
	min-height: 100px;
}

.post-author-bottom .site-logo img {
	float: right;
	height: auto;
}

.post-author-bottom .site-title,
.post-author-bottom .site-description {
	clear: none;
}

.post-author-bottom .post-author-info {
	margin-right: 140px;
	margin-left: 120px;
	padding-right: 25px;
	padding-top: 10px;
}
/* ... */

